--- a/index.html
+++ b/index.html
@@ -1,7 +1,47 @@
 <!doctype html>
 <html>
+<head>
+<style>
+  @font-face {
+    font-family: 'FuturaLT';
+    src: url('/fonts/FuturaLT.woff2');
+  }
+  @font-face {
+    font-family: 'MS-Gothic';
+    src: url('/fonts/MS Gothic.ttf');
+  }
+  @font-face {
+    font-family: 'FuturaStd-BoldOblique';
+    src: url('/fonts/Futura Std Bold Oblique.otf');
+  }
+  @font-face {
+    font-family: 'GillSans';
+    src: url('/fonts/Gill Sans.otf');
+  }
+  @font-face {
+    font-family: 'GillSans-CondensedBold';
+    src: url('/fonts/Gill Sans Condensed Bold.ttf');
+  }
+  @font-face {
+    font-family: 'FuturaStd-Heavy';
+    src: url('/fonts/Futura Std Heavy.otf');
+  }
+  @font-face {
+    font-family: 'FuturaLT-CondensedLight';
+    src: url('/fonts/FuturaLT-CondensedLight.ttf');
+  }
+  @font-face {
+    font-family: 'SanvitoPro-LtCapt';
+    src: url('/fonts/SanvitoPro-LtCapt.otf');
+  }
+  @font-face {
+    font-family: 'FuturaLT-Book';
+    src: url('/fonts/FuturaLT-Book.ttf');
+  }
+</style>
+</head>
 <body>
-  <div className="card-svg-inner" id=container></div>
+<div className="card-svg-inner" id=container></div>
 <script type=module>
 import procgen, {types} from './procgen.js';
 
