--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ const cardHeight = cardWidth/2.5*3.5;
 
 const svg = document.createElement('svg');
 svg.width = cardWidth;
-svg.width = cardHeight;
+svg.height = cardHeight;
 svg.innerHTML = cardSvgSource;
 
 const container = document.getElementById('container');
