--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@ if (!isNaN(tokenId)) {
     }
   }
   
-  window.parent.postMessage({
-    ok: true,
-  }, '*');
-  
-  console.log('done render');
+  /* window.parent.postMessage({
+    ok: true, 
+  }, '*'); */
+
+  console.log('cards done render');
 }
 })();
 </script>
