--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <div id=container></div>
 <script type=module>
 import procgen, {types} from './procgen.js';
+import webfont from './webfont.js';
 
 function parseQuery(queryString) {
   var query = {};
